<resources>
    <string name="app_name">College Marketplace</string>
    <string name="login">Login</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_button">SIGN UP</string>
    <string name="log_out">LOG OUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_home_page">This is Home Page</string>
    <string name="loading_chats">Loading Chats</string>
    <string name="your_adds">Your adds</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">LOGOUT</string>
    <string name="add_button">Add</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Phone no</string>
    <string name="your_account_details">Your Account Details</string>
    <string name="todo">TODO</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="call_seller">Call Seller</string>
    <string name="todo2">TODO</string>
    <string name="add_a_new_item">Add a new item</string>
    <string name="home">Home</string>
    <string name="my_ads">All products</string>
    <string name="account">Account</string>
    <string name="product_name2">Product Name</string>
    <string name="product_description2">Product Description</string>
    <string name="product_price2">Product Price</string>
    <string name="todo3">TODO</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="full_name2">Full Name</string>
    <string name="todo6">TODO</string>
    <string name="demo_name">Demo Name</string>
    <string name="demo_description">Demo Description</string>
    <string name="demo_price">Demo Price</string>
    <string name="demo_name2">Demo Name</string>
    <string name="demo_description2">Demo Description</string>
    <string name="demo_price2">Demo Price</string>
    <string name="todo7">TODO</string>
    <string name="chat">Chat</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="qt">0</string>
</resources>