<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".descFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagegholder"
            android:layout_marginTop="40dp"
            android:layout_width="240dp"
            android:layout_height="228dp"
            android:contentDescription="@string/todo"
            android:src="@color/common_google_signin_btn_text_dark_disabled" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/nameholder"
            android:text="@string/product_name"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/descriptionholder"
            android:text="@string/product_description"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/priceholder"
            android:text="@string/product_price"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#000000" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:id="@+id/call_button"
            android:text="@string/call_seller" />

        <Button
            android:id="@+id/plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/qt"
            android:gravity="center"
            />

        <Button
            android:id="@+id/minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minus" />
    </LinearLayout>
</FrameLayout>
